# chimera-challenge

./: .coderabbit.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: main.yml
.specify/memory/: constitution.md
research/: architecture_strategy.md  research.md  tooling_strategy.md
skills/skill_content_generator/: README.md
skills/skill_trend_analyzer/: README.md
skills/skill_wallet_manager/: README.md
specs/: _meta.md  data-model.md  functional.md  openclaw_integration.md  quickstart.md  research.md  technical.md
specs/_meta/: IMPL_PLAN.md  README.md  constitution.md  plan.md
specs/contracts/: openapi.yaml
specs/main/: data-model.md  plan.md  quickstart.md  research.md
specs/main/contracts/: content-generator.output.json  trend-analyzer.output.json  wallet-manager.output.json
tests/: test_skills_interface.py  test_trend_fetcher.py
